--- a/angular/src/app/app-routing/pending-questions/pending-questions.html
+++ b/angular/src/app/app-routing/pending-questions/pending-questions.html
@@ -1,19 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-    <div class="container">
-        <a class="navbar-brand" href="#">Home</a>
-            <ul class="nav nav-pills">
-                <li class="nav-item">
-                    <button class="nav-link" routerLinkActive="active" routerLink="/admin-dashboard">Go to Admin Dash</button>
-                </li>
-                <li class="nav-item">
-                    <button class="nav-link" routerLinkActive="active" routerLink="/pending-questions">Go to Pending Questions</button>
-                </li>
-                <li class="nav-item">
-                    <button class="nav-link" routerLinkActive="active" routerLink="/pending-answers">Go to Pending Answers</button>
-                </li>
-            </ul>
-    </div>
-</nav>
+<div class="container cyan topBotomBordersOut">
+    <a style="font-size: xx-large; font-weight: 1000; color:white; ">PENDING QUESTIONS</a>
+    <br><br><br>
+    <a routerLinkActive="active" routerLink="/admin-dashboard">ADMIN DASH</a>
+    <a routerLinkActive="active" routerLink="/pending-answers">PENDING ANSWERS</a>
+    <a routerLinkActive="active" routerLink="/search-question">SEARCH QUESTION</a>
+    <a routerLinkActive="active" routerLink="/chat-homepage">CHAT</a>
+    <a routerLinkActive="active" routerLink="/home">LOG OUT</a>
+</div>
+<br>
 
 <ng-container *ngFor="let question of questions; let i = index">
     <ng-container *ngIf="question.status == 'pending'">
