--- a/angular/src/app/app-routing/question-details/question-details.html
+++ b/angular/src/app/app-routing/question-details/question-details.html
@@ -1,29 +1,20 @@
-<ng-container *ngIf="userType == 'admin'">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-        <div class="container">
-            <a class="navbar-brand" href="#">Home</a>
-                <ul class="nav nav-pills">
-                    <li class="nav-item">
-                        <button class="nav-link" routerLinkActive="active" routerLink="/admin-dashboard">Go to Admin Dash</button>
-                    </li>
-                </ul>
-        </div>
-    </nav>
-</ng-container>
+<div class="container cyan topBotomBordersOut">
+    <a style="font-size: xx-large; font-weight: 1000; color:white; ">QUESTION DETAILS</a>
+    <br><br><br>
+    <ng-container *ngIf="userType == 'user'">
+        <a routerLinkActive="active" routerLink="/user-dashboard">USER DASH</a>
+    </ng-container>
+    <ng-container *ngIf="userType == 'admin'">
+        <a routerLinkActive="active" routerLink="/admin-dashboard">ADMIN DASH</a>
+        <a routerLinkActive="active" routerLink="/pending-questions">PENDING QUESTIONS</a>
+        <a routerLinkActive="active" routerLink="/pending-answers">PENDING ANSWERS</a>
+    </ng-container>
+    <a routerLinkActive="active" routerLink="/search-question">SEARCH QUESTION</a>
+    <a routerLinkActive="active" routerLink="/create-question">CREATE QUESTION</a>
+    <a routerLinkActive="active" routerLink="/chat-homepage">CHAT</a>
+    <a routerLinkActive="active" routerLink="/home">LOG OUT</a>
+</div>
 
-<ng-container *ngIf="userType == 'user'">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-        <div class="container">
-            <a class="navbar-brand" href="#">Home</a>
-                <ul class="nav nav-pills">
-                    <li class="nav-item">
-                        <button class="nav-link" routerLinkActive="active" routerLink="/user-dashboard">Go to User Dash</button>
-                    </li>
-                </ul>
-        </div>
-    </nav>
-</ng-container>
-<h1>Question Details</h1>
 <body>
     <img src="{{question.image_src}}" height="100">
     <table>
