implemented more of the navbar and tables! still figuring out img src issue

--- a/angular/src/app/app-routing/landing/landing.component.html
+++ b/angular/src/app/app-routing/landing/landing.component.html
@@ -5,12 +5,12 @@
         <link rel="stylesheet" type="text/css" href="landing.component.css">
     </head>
     
-    <body>
+    <div>
         <h1>Welcome to Group 5's Capstone!</h1>
 
     <div class="container">
         <button class="button" routerLinkActive="active" routerLink="/login">Login/Register</button>
     </div>
   
-    </body>
+    </div>
 </form>
