--- a/angular/src/app/app-routing/chat-details/chat-details.component.html
+++ b/angular/src/app/app-routing/chat-details/chat-details.component.html
@@ -10,6 +10,7 @@
         <a routerLinkActive="active" routerLink="/pending-answers">PENDING ANSWERS</a>
     </ng-container>
     <a routerLinkActive="active" routerLink="/search-question">SEARCH QUESTION</a>
+    <a routerLinkActive="active" routerLink="/create-question">CREATE QUESTION</a>
     <a routerLinkActive="active" routerLink="/chat-homepage">CHAT</a>
     <a routerLinkActive="active" routerLink="/home">LOG OUT</a>
 </div>
