--- a/angular/src/app/app-routing/pending-answers/pending-answers.html
+++ b/angular/src/app/app-routing/pending-answers/pending-answers.html
@@ -4,6 +4,7 @@
     <a routerLinkActive="active" routerLink="/admin-dashboard">ADMIN DASH</a>
     <a routerLinkActive="active" routerLink="/pending-questions">PENDING QUESTIONS</a>
     <a routerLinkActive="active" routerLink="/search-question">SEARCH QUESTION</a>
+    <a routerLinkActive="active" routerLink="/create-question">CREATE QUESTION</a>
     <a routerLinkActive="active" routerLink="/chat-homepage">CHAT</a>
     <a routerLinkActive="active" routerLink="/home">LOG OUT</a>
 </div>
@@ -13,14 +14,15 @@
 <table>
     <th>Id</th>
     <th>DateTime</th>
+    <th>Description</th>
     <th>Author</th>
     <th>Action</th>
     <tr *ngFor="let answer of answers; let i=index">
-        <td *ngIf="answer.status == 'pending'">{{answer.id}}</td>
-        <td *ngIf="answer.status == 'pending'">{{answer.datetime}}</td>
-        <td *ngIf="answer.status == 'pending'">{{answer.created_by}}</td>
-        <td *ngIf="answer.status == 'pending'"><button (click)="approve(i)">Approve</button>        <button (click)="remove(i)">Remove</button>
-
+        <td style="padding: 0 50px" *ngIf="answer.status == 'pending'">{{answer.id}}</td>
+        <td style="padding: 0 50px" *ngIf="answer.status == 'pending'">{{answer.datetime}}</td>
+        <td style="padding: 0 50px" *ngIf="answer.status == 'pending'">{{answer.description_answer}}</td>
+        <td style="padding: 0 50px" *ngIf="answer.status == 'pending'">{{answer.created_by}}</td>
+        <td style="padding: 0 50px" *ngIf="answer.status == 'pending'"><button (click)="approve(i)">Approve</button>        <button (click)="remove(i)">Remove</button>
         </td>
 
     </tr>
