--- a/angular/src/app/app-routing/register/register.component.html
+++ b/angular/src/app/app-routing/register/register.component.html
@@ -1,10 +1,10 @@
 <form class="register-form"> 
 
-    <head>
-        <link rel="stylesheet" type="text/css" href="register.component.css">
-    </head>
+    <!-- <head> -->
+        <!-- <link rel="stylesheet" type="text/css" href="register.component.css"> -->
+    <!-- </head> -->
     
-    <body>
+    <div>
         <h1>Register:</h1>
     
         <form class="center" novalidate #REGISTER_FORM="ngForm" (ngSubmit)="onSubmitRegister()">
@@ -38,7 +38,7 @@
         </form>
 
 
-    </body>
+    </div>
 
 </form>
 
