--- a/angular/src/app/question.component.html
+++ b/angular/src/app/question.component.html
@@ -33,12 +33,12 @@
     <th>Description</th>
     <th>Action</th>
     <tr *ngFor="let question of questions">
-        <td *ngIf="question.status=='accepted'">{{question.id}}</td>
-        <td *ngIf="question.status=='accepted'"><img src="{{question.image_src}}"></td>
-        <td *ngIf="question.status=='accepted'">{{question.topic}}</td>
-        <td *ngIf="question.status=='accepted'">{{question.title}}</td>
-        <td *ngIf="question.status=='accepted'">{{question.description_question}}</td>
-        <td *ngIf="question.status=='accepted'">    <button routerLinkActive="active" routerLink="/question-details" (click)="setCurrQuestionId(question.id)">Question Details</button> <br>
+        <td style="padding: 0 50px" *ngIf="question.status=='accepted'">{{question.id}}</td>
+        <td style="padding: 0 50px" *ngIf="question.status=='accepted'"><img src="{{question.image_src}}"></td>
+        <td style="padding: 0 50px" *ngIf="question.status=='accepted'">{{question.topic}}</td>
+        <td style="padding: 0 50px" *ngIf="question.status=='accepted'">{{question.title}}</td>
+        <td style="padding: 0 50px" *ngIf="question.status=='accepted'">{{question.description_question}}</td>
+        <td style="padding: 0 50px" *ngIf="question.status=='accepted'">    <button routerLinkActive="active" routerLink="/question-details" (click)="setCurrQuestionId(question.id)">Question Details</button> <br>
         </td>
     </tr>
 </table>
