fixed bug that showed image on question component

--- a/angular/src/app/question.component.html
+++ b/angular/src/app/question.component.html
@@ -43,7 +43,7 @@
         </td>
     </tr>
 </table>
-<img src='ss_yoshigalint9.png'>
+<!-- <img src='ss_yoshigalint9.png'> -->
 <!-- <ng-container *ngFor="let question of questions; let i = index">
     <ng-container *ngIf="question.status=='accepted'">
     {{question.id}}
