--- a/angular/src/app/app-routing/page-not-found/page-not-found.component.html
+++ b/angular/src/app/app-routing/page-not-found/page-not-found.component.html
@@ -1,1 +1,16 @@
 <p>HTTP ERROR 404: page-not-found!</p>
+
+<table>
+    <tr>
+      <th>Firstname</th>
+      <th>Lastname</th>
+    </tr>
+    <tr>
+      <td>Peter</td>
+      <td>Griffin</td>
+    </tr>
+    <tr>
+      <td>Lois</td>
+      <td>Griffin</td>
+    </tr>
+  </table>
