--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -14,3 +14,17 @@ body {
     font-weight:750;
 }
 
+table,th,td{
+  border: 1px solid;
+}
+
+table{
+  border-collapse: collapse;
+}
+
+th{
+  background-color: aqua;
+}
+tr:nth-child(even) {background-color: #f2f2f2;}
+tr:nth-child(odd){ background-color: white;}
+
