--- a/angular/src/app/app-routing/pending-answers/pending-answers.html
+++ b/angular/src/app/app-routing/pending-answers/pending-answers.html
@@ -14,11 +14,13 @@
 
 <ng-template #elseBlock>
 <table>
+    <tr style="background-color: rgb(0, 195, 255);">
     <th>Id</th>
     <th>DateTime</th>
     <th>Description</th>
     <th>Author</th>
     <th>Action</th>
+    </tr>
     <tr *ngFor="let answer of answers; let i=index">
         <td style="padding: 0 50px" *ngIf="answer.status == 'pending'">{{answer.id}}</td>
         <td style="padding: 0 50px" *ngIf="answer.status == 'pending'">{{answer.datetime}}</td>
