--- a/angular/src/app/app-routing/question-details/question-details.html
+++ b/angular/src/app/app-routing/question-details/question-details.html
@@ -18,12 +18,18 @@
 <body>
     <img src="{{question.image_src}}" height="100">
     <table>
+        <tr style="background-color: rgb(0, 195, 255);">
         <th>Id</th>
+        <th>Author</th>
+        <th>Time</th>
         <th>Topic</th>
         <th>Title</th>
-        <th>Description</th>
+        <th>Question</th>
+        </tr>
         <tr>
             <td style="padding: 0 50px">{{question.id}}</td>
+            <td style="padding: 0 50px">{{question.qcreated_by}}</td>
+            <td style="padding: 0 50px">{{question.datetime}}</td>
             <td style="padding: 0 50px">{{question.topic}}</td>
             <td style="padding: 0 50px">{{question.title}}</td>
             <td style="padding: 0 50px">{{question.description_question}}</td>
@@ -32,10 +38,12 @@
 
     <h1>Answers</h1>
     <table>
+        <tr style="background-color: rgb(0, 195, 255);">
         <th>Id</th>
         <th>Image</th>
         <th>Description</th>
         <th>Author</th>
+        </tr>
         <tr *ngFor="let answer of answers">
             <td style="padding: 0 50px" *ngIf="answer.status=='accepted'">{{answer.id}}</td>
             <td style="padding: 0 50px" *ngIf="answer.status=='accepted'"><img src="{{answer.image_src}}" height="100"></td>
