--- a/angular/src/app/app-routing/search-question/search-question.component.html
+++ b/angular/src/app/app-routing/search-question/search-question.component.html
@@ -21,11 +21,13 @@
 
 <br>
 <table>
+    <tr style="background-color: rgb(0, 195, 255);">
     <th>Id</th>
     <th>Title</th>
     <th>Topic</th>
-    <th>Description</th>
+    <th>Question</th>
     <th>Action</th>
+    </tr>
     <tr *ngFor="let question of questions">
         <td style="padding: 0 50px"  style="padding: 0 50px" *ngIf="question.title.includes(query)">{{question.id}}</td>
         <td style="padding: 0 50px"  style="padding: 0 50px" *ngIf="question.title.includes(query)">{{question.title}}</td>
