--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -22,9 +22,16 @@ table{
   border-collapse: collapse;
 }
 
-th{
-  background-color: aqua;
+
+td{
+  color: black;
 }
-tr:nth-child(even) {background-color: #f2f2f2;}
-tr:nth-child(odd){ background-color: white;}
+tr:nth-child(even) {
+  background-color: #dcfbfe;
+  background-blend-mode: multiply;
+}
+tr:nth-child(odd){ 
+  background-color:#d0eef0;
+  background-blend-mode: multiply;
+}
 
