--- a/angular/src/app/app-routing/chat-details/chat-details.component.html
+++ b/angular/src/app/app-routing/chat-details/chat-details.component.html
@@ -17,8 +17,8 @@
 <br>
 
 <div id="textbox">
-    <p class="alignleft">{{user.userName}} ({{user.name}})</p>
-    <p class="alignright">{{chatUser.userName}} ({{chatUser.name}})</p>
+    <p class="alignright">{{user.userName}} ({{user.name}})</p>
+    <p class="alignleft">{{chatUser.userName}} ({{chatUser.name}})</p>
 </div>
 <div style="clear: both;"></div>
 
@@ -27,13 +27,13 @@
 <div>
     <ng-container *ngFor="let chat of chats">
         <ng-container *ngIf="chat.fromUser == user.userName">
-            <p class="alignleft">{{chat.datetime}}</p> <br>
-            <p class="alignleft">{{chat.message}}</p>
+            <p class="alignright">{{chat.datetime}}</p> <br>
+            <p class="alignright">{{chat.message}}</p>
             <div style="clear: both;"></div>
         </ng-container>
         <ng-container *ngIf="chat.fromUser == chatUser.userName">
-            <p class="alignright">{{chat.datetime}}</p> <br>
-            <p class="alignright">{{chat.message}}</p>
+            <p class="alignleft">{{chat.datetime}}</p> <br>
+            <p class="alignleft">{{chat.message}}</p>
             <div style="clear: both;"></div>
         </ng-container>
     </ng-container>
@@ -43,7 +43,7 @@
 <br><br><br>
 
 <div>
-    <form novalidate #CHAT_FORM="ngForm" (ngSubmit)="onSubmitChat()">
+    <form novalidate #CHAT_FORM="ngForm" (ngSubmit)="onSubmitChat()" class="alignright">
         <div>
             <label for="message">Message</label> <br>
             <input type="text" [(ngModel)]="chat_form.message" name="message" style="padding-bottom: 50px; padding-right:200px" required>
