--- a/angular/src/app/app-routing/pending-answers/pending-answers.html
+++ b/angular/src/app/app-routing/pending-answers/pending-answers.html
@@ -16,17 +16,19 @@
 <table>
     <tr style="background-color: rgb(0, 195, 255);">
     <th>Id</th>
-    <th>DateTime</th>
-    <th>Description</th>
+    <th>Image</th>
     <th>Author</th>
+    <th>Time</th>
+    <th>Answer</th>
     <th>Action</th>
     </tr>
     <tr *ngFor="let answer of answers; let i=index">
-        <td style="padding: 0 50px" *ngIf="answer.status == 'pending'">{{answer.id}}</td>
-        <td style="padding: 0 50px" *ngIf="answer.status == 'pending'">{{answer.datetime}}</td>
-        <td style="padding: 0 50px" *ngIf="answer.status == 'pending'">{{answer.description_answer}}</td>
-        <td style="padding: 0 50px" *ngIf="answer.status == 'pending'">{{answer.created_by}}</td>
-        <td style="padding: 0 50px" *ngIf="answer.status == 'pending'"><button (click)="approve(i)">Approve</button>        <button (click)="remove(i)">Remove</button>
+        <td style="padding: 0 5px" *ngIf="answer.status == 'pending'">{{answer.id}}</td>
+        <td style="padding: 0 0px" *ngIf="answer.status == 'pending'"><img src="{{answer.image_src}}" height="100" width="100"></td>
+        <td style="padding: 0 5px" *ngIf="answer.status == 'pending'">{{answer.created_by}}</td>
+        <td style="padding: 0 5px" *ngIf="answer.status == 'pending'">{{answer.datetime}}</td>
+        <td style="padding: 0 5px" *ngIf="answer.status == 'pending'">{{answer.description_answer}}</td>
+        <td style="padding: 0 5px" *ngIf="answer.status == 'pending'"><button (click)="approve(i)">Approve</button>        <button (click)="remove(i)">Remove</button>
         </td>
 
     </tr>
