--- a/angular/src/app/app-routing/question-details/question-details.html
+++ b/angular/src/app/app-routing/question-details/question-details.html
@@ -27,12 +27,12 @@
         <th>Question</th>
         </tr>
         <tr>
-            <td style="padding: 0 50px">{{question.id}}</td>
-            <td style="padding: 0 50px">{{question.qcreated_by}}</td>
-            <td style="padding: 0 50px">{{question.datetime}}</td>
-            <td style="padding: 0 50px">{{question.topic}}</td>
-            <td style="padding: 0 50px">{{question.title}}</td>
-            <td style="padding: 0 50px">{{question.description_question}}</td>
+            <td style="padding: 0 5px">{{question.id}}</td>
+            <td style="padding: 0 5px">{{question.qcreated_by}}</td>
+            <td style="padding: 0 5px">{{question.datetime}}</td>
+            <td style="padding: 0 5px">{{question.topic}}</td>
+            <td style="padding: 0 5px">{{question.title}}</td>
+            <td style="padding: 0 5px">{{question.description_question}}</td>
         </tr>
     </table>
 
@@ -41,14 +41,19 @@
         <tr style="background-color: rgb(0, 195, 255);">
         <th>Id</th>
         <th>Image</th>
-        <th>Description</th>
         <th>Author</th>
+        <th>Time</th>
+        <th>Question</th>
+
         </tr>
         <tr *ngFor="let answer of answers">
-            <td style="padding: 0 50px" *ngIf="answer.status=='accepted'">{{answer.id}}</td>
-            <td style="padding: 0 50px" *ngIf="answer.status=='accepted'"><img src="{{answer.image_src}}" height="100"></td>
-            <td style="padding: 0 50px" *ngIf="answer.status=='accepted'">{{answer.description_answer}}</td>
-            <td style="padding: 0 50px" *ngIf="answer.status=='accepted'">{{answer.created_by}}</td>
+            <td style="padding: 0 5px" *ngIf="answer.status=='accepted'">{{answer.id}}</td>
+            <td style="padding: 0 0px" *ngIf="answer.status=='accepted'"><img src="{{answer.image_src}}" height="100"></td>
+            <td style="padding: 0 5px" *ngIf="answer.status=='accepted'">{{answer.created_by}}</td>
+            <td style="padding: 0 5px" *ngIf="answer.status=='accepted'">{{answer.datetime}}</td>
+            <td style="padding: 0 5px" *ngIf="answer.status=='accepted'">{{answer.description_answer}}</td>
+
+
 
         </tr>
     </table>
