fixed question details image size and pending questions for loop

--- a/angular/src/app/question.component.html
+++ b/angular/src/app/question.component.html
@@ -36,17 +36,21 @@
     <th>Question</th>
     <th>Action</th>
     </tr>
-    <tr *ngFor="let question of questions">
-        <td style="padding: 0 5px" *ngIf="question.status=='accepted'">{{question.id}}</td>
-        <td style="padding: 0 0px" *ngIf="question.status=='accepted'"> <img src='{{question.image_src}}' height='100px' width="100px"></td>
-        <td style="padding: 0 5px" *ngIf="question.status=='accepted'">{{question.qcreated_by}}</td>
-        <td style="padding: 0 5px" *ngIf="question.status=='accepted'">{{question.datetime}}</td>
-        <td style="padding: 0 5px" *ngIf="question.status=='accepted'">{{question.topic}}</td>
-        <td style="padding: 0 5px" *ngIf="question.status=='accepted'">{{question.title}}</td>
-        <td style="padding: 0 5px" *ngIf="question.status=='accepted'">{{question.description_question}}</td>
-        <td style="padding: 0 5px" *ngIf="question.status=='accepted'">    <button routerLinkActive="active" routerLink="/question-details" (click)="setCurrQuestionId(question.id)">Question Details</button> <br>
-        </td>
-    </tr>
+    <ng-container *ngFor="let question of questions;">
+        <ng-container *ngIf="question.status == 'accepted'">
+            <tr>
+                <!-- <td style="padding: 0 5px" *ngIf="question.status=='accepted'">{{question.id}}</td> -->
+                <td style="padding: 0 5px">{{question.id}}</td>
+                <td style="padding: 0 0px"> <img src='{{question.image_src}}' height='100px' width="100px"></td>
+                <td style="padding: 0 5px">{{question.qcreated_by}}</td>
+                <td style="padding: 0 5px">{{question.datetime}}</td>
+                <td style="padding: 0 5px">{{question.topic}}</td>
+                <td style="padding: 0 5px">{{question.title}}</td>
+                <td style="padding: 0 5px">{{question.description_question}}</td>
+                <td style="padding: 0 5px"><button routerLinkActive="active" routerLink="/question-details" (click)="setCurrQuestionId(question.id)">Question Details</button></td>
+            </tr>
+        </ng-container>
+    </ng-container>
 </table>
 <!-- <img src='ss_yoshigalint9.png'> -->
 <!-- <ng-container *ngFor="let question of questions; let i = index">
