--- a/angular/src/app/app-routing/question-details/question-details.html
+++ b/angular/src/app/app-routing/question-details/question-details.html
@@ -43,7 +43,7 @@
         <th>Image</th>
         <th>Author</th>
         <th>Time</th>
-        <th>Question</th>
+        <th>Answer</th>
 
         </tr>
         <tr *ngFor="let answer of answers">
