rough draft about page

--- a/angular/src/app/app-routing/about/about.component.html
+++ b/angular/src/app/app-routing/about/about.component.html
@@ -1,1 +1,3 @@
-<p>about works!</p>
+<h1>About</h1>
+
+<p>This is a capstone project for Cogent University created by William Barnes, Travis Bennett and Royce Moses.</p>
