--- a/angular/src/app/app-routing/landing/landing.component.html
+++ b/angular/src/app/app-routing/landing/landing.component.html
@@ -10,6 +10,8 @@
 
     <div class="container">
         <button class="button" routerLinkActive="active" routerLink="/login">Login/Register</button>
+        <button class="button" routerLinkActive="active" routerLink="/about">About Us</button>
+
     </div>
   
     </div>
