--- a/angular/src/app/app-routing/chat-homepage/chat-homepage.component.html
+++ b/angular/src/app/app-routing/chat-homepage/chat-homepage.component.html
@@ -14,11 +14,20 @@
     <a routerLinkActive="active" routerLink="/home">LOG OUT</a>
 </div>
 <br>
-
+<h2>Chat</h2>
+<table>
+    <tr style="background-color: rgb(0, 195, 255);">
+        <th>User Name</th>
+        <th>Action</th>
+    </tr>
 <ng-container *ngFor="let user of users">
     <ng-container *ngIf="user.userName != 'none' && user.userName != currUserName">
-        {{user.userName}}
-        <button routerLinkActive="active" routerLink="/chat-details" (click)="setCurrChatUser(user)">Chat</button>
-        <br>
+        
+            <tr>
+                <td>{{user.userName}}</td>
+                <td><button routerLinkActive="active" routerLink="/chat-details" (click)="setCurrChatUser(user)">Chat</button></td>
+            </tr>
+                  
     </ng-container>
 </ng-container>
+</table>
