fixed routing, implemented 403 and 404 error

--- a/angular/src/app/app-routing/create-question/create-question.component.html
+++ b/angular/src/app/app-routing/create-question/create-question.component.html
@@ -30,7 +30,7 @@
 
     <div>
         <label for="description">Description </label>
-        <input type="text" [(ngModel)]="question_form.description_question" name="description" required>
+        <input type="text" [(ngModel)]="question_form.description_question" name="description" style="padding-bottom: 50px; padding-right: 200px" required>
     </div>
 
     <div>
