--- a/angular/src/app/app-routing/question-details/question-details.html
+++ b/angular/src/app/app-routing/question-details/question-details.html
@@ -36,7 +36,11 @@
         </tr>
     </table>
 
+    
     <h1>Answers</h1>
+    <div *ngIf="numOfAnswersAccepted==0; else elseBlock">No answers to display.</div>
+
+    <ng-template #elseBlock>
     <table>
         <tr style="background-color: rgb(0, 195, 255);">
         <th>Id</th>
@@ -44,19 +48,20 @@
         <th>Author</th>
         <th>Time</th>
         <th>Answer</th>
-
         </tr>
-        <tr *ngFor="let answer of answers">
-            <td style="padding: 0 5px" *ngIf="answer.status=='accepted'">{{answer.id}}</td>
-            <td style="padding: 0 0px" *ngIf="answer.status=='accepted'"><img src="{{answer.image_src}}" height="100"></td>
-            <td style="padding: 0 5px" *ngIf="answer.status=='accepted'">{{answer.created_by}}</td>
-            <td style="padding: 0 5px" *ngIf="answer.status=='accepted'">{{answer.datetime}}</td>
-            <td style="padding: 0 5px" *ngIf="answer.status=='accepted'">{{answer.description_answer}}</td>
-
-
-
-        </tr>
+        <ng-container *ngFor="let answer of answers">
+            <ng-container *ngIf="answer.status == 'accepted'">
+                <tr>
+                    <td style="padding: 0 5px">{{answer.id}}</td>
+                    <td style="padding: 0 0px"><img src="{{answer.image_src}}" width="100px" height="100px"></td>
+                    <td style="padding: 0 5px">{{answer.created_by}}</td>
+                    <td style="padding: 0 5px">{{answer.datetime}}</td>
+                    <td style="padding: 0 5px">{{answer.description_answer}}</td>
+                </tr>
+            </ng-container>
+        </ng-container>
     </table>
+    </ng-template>
 <!-- <p>
     {{question_id}}
     {{question.description_question}}
