--- a/angular/src/app/app-routing/chat-homepage/chat-homepage.component.html
+++ b/angular/src/app/app-routing/chat-homepage/chat-homepage.component.html
@@ -14,8 +14,8 @@
     <a routerLinkActive="active" routerLink="/home">LOG OUT</a>
 </div>
 <br>
-<h2>Chat</h2>
-<table>
+<h2 style="text-align: center;">Chat</h2>
+<table style="margin-left: auto; margin-right: auto;">
     <tr style="background-color: rgb(0, 195, 255);">
         <th>User Name</th>
         <th>Action</th>
@@ -24,8 +24,8 @@
     <ng-container *ngIf="user.userName != 'none' && user.userName != currUserName">
         
             <tr>
-                <td>{{user.userName}}</td>
-                <td><button routerLinkActive="active" routerLink="/chat-details" (click)="setCurrChatUser(user)">Chat</button></td>
+                <td style="padding: 0 50px;text-align: center;">{{user.userName}}</td>
+                <td style="padding: 0 5px;padding-top: 5px;padding-bottom: 5px;text-align: center;"><button routerLinkActive="active" routerLink="/chat-details" (click)="setCurrChatUser(user)">Chat</button></td>
             </tr>
                   
     </ng-container>
