--- a/angular/src/app/app-routing/create-question/create-question.component.html
+++ b/angular/src/app/app-routing/create-question/create-question.component.html
@@ -29,8 +29,11 @@
     </div>
 
     <div>
+        
         <label for="description">Description </label>
-        <input type="text" [(ngModel)]="question_form.description_question" name="description" style="padding-bottom: 50px; padding-right: 200px" required>
+        
+        <textarea type="text" rows="5" cols="50" [(ngModel)]="question_form.description_question" name="description" ng-style="{width: '150px', height: '50px'}" style="width:150px; height: 50px;" style="padding-bottom: 50px;" required>
+        </textarea>
     </div>
 
     <div>
