--- a/angular/src/app/app-routing/chat-details/chat-details.component.html
+++ b/angular/src/app/app-routing/chat-details/chat-details.component.html
@@ -27,14 +27,14 @@
 <div>
     <ng-container *ngFor="let chat of chats">
         <ng-container *ngIf="chat.fromUser == user.userName">
-            <p class="alignright">{{chat.datetime}}</p> <br>
-            <p class="alignright">{{chat.message}}</p>
-            <div style="clear: both;"></div>
+            <p style="text-align: right;">{{chat.datetime}}</p>
+            <p style="text-align: right;"><span style="border-radius: 25px;background-color: white;border-style:solid; border-width: 2px;border-color: black;margin-left: auto;padding-left: 20px; padding-right: 20px;">{{chat.message}}</span></p>
+            <!-- <div style="clear: both;"></div> -->
         </ng-container>
         <ng-container *ngIf="chat.fromUser == chatUser.userName">
-            <p class="alignleft">{{chat.datetime}}</p> <br>
-            <p class="alignleft">{{chat.message}}</p>
-            <div style="clear: both;"></div>
+            <p style="text-align: left;">{{chat.datetime}}</p>
+            <p style="text-align: left;"><span style="border-radius: 25px;background-color: white;text-align:center;border-style:solid; border-width: 2px;border-color: black;margin-left: auto;padding-right: 20px; padding-left: 20px;">{{chat.message}}</span></p>
+            <!-- <div style="clear: both;"></div> -->
         </ng-container>
     </ng-container>
 </div>
